--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,10 +19,12 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^22.13.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "eslint": "^9.22.0",
+    "tailwindcss": "^4.0.15",
     "typescript": "5.8.2"
   }
 }
