--- a/apps/http-backend/tsconfig.json
+++ b/apps/http-backend/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
