--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "http-backend",
+  "name": "ws-backend",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js",
     "dev": "nodemon",
-    "build": "tsc -b"
+    "build": "tsc -b",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,16 +14,14 @@
   "devDependencies": {
     "@repo/nodemon-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ws": "^8.18.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@repo/db": "workspace:*",
-    "@repo/validations": "workspace:*",
-    "bcryptjs": "^3.0.2",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "@types/jsonwebtoken": "^9.0.9",
+    "jsonwebtoken": "^9.0.2",
+    "ws": "^8.18.1"
   }
 }
