--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --config nodemon.json",
     "build": "tsc -b",
     "start": "node dist/index.js"
   },
@@ -12,7 +12,6 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@repo/nodemon-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.9",
