--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.9",
@@ -22,6 +23,7 @@
     "@repo/db": "workspace:*",
     "@repo/validations": "workspace:*",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
   }
