--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "./components/*": "./src/components/*.tsx",
     "./lib/utils": "./src/lib/utils.ts",
     "./postcss.config": "./postcss.config.mjs",
-    "./styles/*": "./src/styles/*"
+    "./styles/*": "./src/styles/*",
+    "./hooks/*": "./src/hooks/*.ts"
   },
   "peerDependencies": {
     "react": "^19.0.0",
