--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "frontend",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -8,11 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "prisma:generate": "cd ./packages/db && npx prisma generate",
+    "prisma:studio": "cd ./packages/db && npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@repo/ui": "workspace:*",
+    "@repo/db": "workspace:*",
     "next": "^15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
